[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Gui.gd" type="Script" id=1]
[ext_resource path="res://font/cubic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 361.0
margin_bottom = 84.0
custom_constants/separation = 24

[node name="DiceCleared" type="Label" parent="VBoxContainer"]
margin_right = 329.0
margin_bottom = 24.0
text = "Dice Cleared: 0"

[node name="MovesLeft" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 329.0
margin_bottom = 72.0
text = "Moves Left"

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -23.0
margin_right = 231.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Dice Matching"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 93.0
margin_right = 57.0
margin_bottom = 153.0
text = "Begin"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
